--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,4 +10,5 @@
 @import './globals/header.scss';
 @import './globals/footer.scss';
 
-@import './ribbons/home.scss';
+@import './ribbons/herobanner.scss';
+@import './ribbons/image-text.scss';
