--- a/app/scss/globals/header.scss
+++ b/app/scss/globals/header.scss
@@ -44,11 +44,10 @@
 @media only screen and (max-width: 768px) {
     .header {
         .header__container {
-            max-width: 311px;
             margin: 0 auto;
             display: flex;
             align-items: center;
-            padding: 32px 0;
+            padding: 32px 34px;
             justify-content: space-between;
             position: relative;
     
