--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -13,3 +13,4 @@
 @import './ribbons/herobanner.scss';
 @import './ribbons/image-text.scss';
 @import './ribbons/featured.scss';
+@import './ribbons/banner.scss';
