--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -14,3 +14,4 @@
 @import './ribbons/image-text.scss';
 @import './ribbons/featured.scss';
 @import './ribbons/banner.scss';
+@import './ribbons/portfolio.scss';
