Add hero section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -15,3 +15,4 @@
 @import './ribbons/featured.scss';
 @import './ribbons/banner.scss';
 @import './ribbons/portfolio.scss';
+@import './ribbons/hero.scss';
