add image text on about section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,3 +16,4 @@
 @import './ribbons/banner.scss';
 @import './ribbons/portfolio.scss';
 @import './ribbons/hero.scss';
+@import './ribbons/about-imagetext.scss';
