--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,3 +17,4 @@
 @import './ribbons/portfolio.scss';
 @import './ribbons/hero.scss';
 @import './ribbons/about-imagetext.scss';
+@import './ribbons/leaders.scss';
