--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -18,3 +18,4 @@
 @import './ribbons/hero.scss';
 @import './ribbons/about-imagetext.scss';
 @import './ribbons/leaders.scss';
+@import './ribbons/contact.scss';
