add contact form

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,3 +19,4 @@
 @import './ribbons/about-imagetext.scss';
 @import './ribbons/leaders.scss';
 @import './ribbons/contact.scss';
+@import './ribbons/contact-form.scss';
