--- a/app/scss/globals/base.scss
+++ b/app/scss/globals/base.scss
@@ -62,6 +62,7 @@ a {
     font-family: "League Spartan", Arial, sans-serif;
     text-decoration: none;
     cursor: pointer;
+    color: #7D828F;
 }
 
 li {
