--- a/app/scss/ribbons/banner.scss
+++ b/app/scss/ribbons/banner.scss
@@ -20,6 +20,7 @@
             
             .button {
                 margin-top: 26px;
+                width: max-content;
             }
         }
 
