--- a/app/scss/ribbons/herobanner.scss
+++ b/app/scss/ribbons/herobanner.scss
@@ -1,5 +1,6 @@
 // HEROBANNER
 .herobanner {
+    margin-top: 150px;
 
     .herobanner__splide {
 
@@ -91,6 +92,7 @@
 @media only screen and (max-width: 768px) {
     
     .herobanner {
+        margin-top: 110px;
 
         .herobanner__splide {
     
