--- a/app/scss/ribbons/hero.scss
+++ b/app/scss/ribbons/hero.scss
@@ -1,4 +1,5 @@
 .hero {
+    margin-top: 150px;
 
     .hero__container {
         position: relative;
@@ -83,6 +84,7 @@
 
 @media only screen and (max-width: 428px) {
     .hero {
+        margin-top: 110px;
 
         .hero__container {
 
