--- a/app/scss/globals/footer.scss
+++ b/app/scss/globals/footer.scss
@@ -41,6 +41,10 @@
                         
                         a {
                             font-weight: 700;
+                                                    
+                            &:hover{
+                                color: #1B1D23;
+                            }
                         }
                     }
                 }
