--- a/app/scss/globals/header.scss
+++ b/app/scss/globals/header.scss
@@ -31,6 +31,10 @@
                     
                     a {
                         font-weight: 700;
+                        
+                        &:hover{
+                            color: #1B1D23;
+                        }
                     }
                 }
             }
